--- a/content/resources/mit21g_412f14_wo10-11_di.md
+++ b/content/resources/mit21g_412f14_wo10-11_di.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding diskursverbindunge
   und diskurpartikel.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/fbb1f69c6991fec66241ee9c8c6fcc18_MIT21G_412F14_Wo10-11_Di.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: Diskursverbindungen und Diskurpartikel - 21G.412 Fall 2014
 uid: fbb1f69c-6991-fec6-6241-ee9c8c6fcc18
