--- a/content/resources/mit21g_412f14_wo10-11_expa.md
+++ b/content/resources/mit21g_412f14_wo10-11_expa.md
@@ -4,6 +4,7 @@ description: "This resource contains the information regarding \xDCbung zu erwei
   \ partizipialkonstruktionen (answer key)."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/de361b30e6fbffac93285c9fe9beec13_MIT21G_412F14_Wo10-11_expa.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: "\xDCbung zu erweiterten Partizipialkonstruktionen (answer key) - 21G.412 Fall\
   \ 2014"
