--- a/content/resources/mit21g_412f14_wo10-11_ext.md
+++ b/content/resources/mit21g_412f14_wo10-11_ext.md
@@ -4,6 +4,7 @@ description: "This resource contains the information regarding \xDCbung zu erwei
   \ partizipialkonstruktionen."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/f9efe2d0dd25b944a362fb47bf0cf18f_MIT21G_412F14_Wo10-11_ext.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: "\xDCbung zu erweiterten Partizipialkonstruktionen - 21G.412 Fall 2014"
 uid: f9efe2d0-dd25-b944-a362-fb47bf0cf18f
