--- a/content/resources/mit21g_412f14_wo10-11_int.md
+++ b/content/resources/mit21g_412f14_wo10-11_int.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding rezensionen zu "di
   physiker".
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/8a53fbb3975aac185adf381b3f0c6599_MIT21G_412F14_Wo10-11_int.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: Rezensionen zu "Die Physiker" - 21G.412 Fall 2014
 uid: 8a53fbb3-975a-ac18-5adf-381b3f0c6599
