--- a/content/resources/mit21g_412f14_wo10-11_rec.md
+++ b/content/resources/mit21g_412f14_wo10-11_rec.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding wortfeld "recht un
   gesetz" teil 4.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/27aabfc2366e7d9b54f455ffd7fa23eb_MIT21G_412F14_Wo10-11_Rec.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: Wortfeld "Recht und Gesetz" Teil 4 - 21G.412 Fall 2014
 uid: 27aabfc2-366e-7d9b-54f4-55ffd7fa23eb
