--- a/content/resources/mit21g_412f14_wo10-11_ueb.md
+++ b/content/resources/mit21g_412f14_wo10-11_ueb.md
@@ -4,6 +4,7 @@ description: "This resource contains the information regarding \xDCber eine thea
   hrung sprechen."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/7301edd261e83ea43590154936f5e705_MIT21G_412F14_Wo10-11_Ueb.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: "\xDCber eine Theaterauff\xFChrung sprechen - 21G.412 Fall 2014"
 uid: 7301edd2-61e8-3ea4-3590-154936f5e705
