--- a/content/resources/mit21g_412f14_wo10-11_zita.md
+++ b/content/resources/mit21g_412f14_wo10-11_zita.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding duerrenmatt-Zitate
   kritik in "die physiker".
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/9f9b5ede51fa6fb61e1eaaae5e8cdd85_MIT21G_412F14_Wo10-11_Zita.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: Duerrenmatt-Zitate und Kritik in "Die Physiker" - 21G.412 Fall 2014
 uid: 9f9b5ede-51fa-6fb6-1e1e-aaae5e8cdd85
