--- a/content/resources/mit21g_412f14_wo11-13_arb.md
+++ b/content/resources/mit21g_412f14_wo11-13_arb.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding recherchen zum aut
   und zum genre.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/23237c5e779d927d54c5b910bb913e77_MIT21G_412F14_Wo11-13_arb.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: Recherchen zum Autor und zum Genre - 21G.412 Fall 2014
 uid: 23237c5e-779d-927d-54c5-b910bb913e77
