--- a/content/resources/mit21g_412f14_wo11-13_erz.md
+++ b/content/resources/mit21g_412f14_wo11-13_erz.md
@@ -3,6 +3,7 @@ content_type: resource
 description: "This resource contains the information regarding theorie: erz\xE4hlhaltung."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/e77d7aee65c994d2520fb9037a2add7a_MIT21G_412F14_Wo11-13_Erz.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: "Theorie: Erz\xE4hlhaltung - 21G.412 Fall 2014"
 uid: e77d7aee-65c9-94d2-520f-b9037a2add7a
