--- a/content/resources/mit21g_412f14_wo11-13_fra.md
+++ b/content/resources/mit21g_412f14_wo11-13_fra.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding diskussionsfragen 
   text.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/ea4bfa6d989637759e5feaf4c409f121_MIT21G_412F14_Wo11-13_Fra.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: Diskussionsfragen zum Text - 21G.412 Fall 2014
 uid: ea4bfa6d-9896-3775-9e5f-eaf4c409f121
