--- a/content/resources/mit21g_412f14_wo11-13_jak.md
+++ b/content/resources/mit21g_412f14_wo11-13_jak.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding rezensionen zum buch.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/e963b9e3d8d99b27cedac13de8b74d01_MIT21G_412F14_Wo11-13_Jak.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: Rezensionen zum Buch - 21G.412 Fall 2014
 uid: e963b9e3-d8d9-9b27-ceda-c13de8b74d01
