--- a/content/resources/mit21g_412f14_wo14-15_die.md
+++ b/content/resources/mit21g_412f14_wo14-15_die.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding einstieg in den fi
   (text).
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/10f02474e462b6a822d54b73d03153f0_MIT21G_412F14_Wo14-15_Die.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: Einstieg in den Film (Text) - 21G.412 Fall 2014
 uid: 10f02474-e462-b6a8-22d5-4b73d03153f0
