--- a/content/resources/mit21g_412f14_wo14-15_oh.md
+++ b/content/resources/mit21g_412f14_wo14-15_oh.md
@@ -4,6 +4,7 @@ description: 'This resource contains the information regarding theorie: vermutun
   mit modalverben im subjektiven Gebrauch.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/98446dab2ccbe42a38fbf5de0f421bcb_MIT21G_412F14_Wo14-15_OH.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: 'Theorie: Vermutungen mit Modalverben im subjektiven Gebrauch - 21G.412 Fall
   2014'
