--- a/content/resources/mit21g_412f14_wo14-15_par.md
+++ b/content/resources/mit21g_412f14_wo14-15_par.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding elemente des films
   parfum".
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/6051ef84b57eb3171a302857981e7298_MIT21G_412F14_Wo14-15_par.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: Elemente des Films "Das Parfum" - 21G.412 Fall 2014
 uid: 6051ef84-b57e-b317-1a30-2857981e7298
