--- a/content/resources/mit21g_412f14_wo14-15_pre.md
+++ b/content/resources/mit21g_412f14_wo14-15_pre.md
@@ -4,6 +4,7 @@ description: 'This resource contains the information regarding vortrag/diskussio
   visualisierungen von geruch und dem riechen.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/086e33dd4f0932fdb046d05aa59952ca_MIT21G_412F14_Wo14-15_Pre.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: 'Vortrag/Diskussion: Visualisierungen von Geruch und dem Riechen - 21G.412
   Fall 2014'
