--- a/content/resources/mit21g_412f14_wo14-15_tex.md
+++ b/content/resources/mit21g_412f14_wo14-15_tex.md
@@ -4,6 +4,7 @@ description: "This resource contains the information regarding aufgabe: textbeis
   \ zur erz\xE4hlhaltung."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/e5ad89f50f5d22f0f4ef9595ca414ffc_MIT21G_412F14_Wo14-15_Tex.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: "Aufgabe: Textbeispiele zur Erz\xE4hlhaltung - 21G.412 Fall 2014"
 uid: e5ad89f5-0f5d-22f0-f4ef-9595ca414ffc
