--- a/content/resources/mit21g_412f14_wo7-9_3go.md
+++ b/content/resources/mit21g_412f14_wo7-9_3go.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding die rolle der songs.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21g-412-advanced-german-literature-culture-madness-murder-mysteries-fall-2014/e6d079dd1b1c03c2a3b7f82cb4e64268_MIT21G_412F14_Wo7-9_3go.pdf
 file_type: application/pdf
+parent_uid: 8f935e55-bfb6-2b93-cb4b-250343184c1c
 resourcetype: Document
 title: Die Rolle der Songs - 21G.412 Fall 2014
 uid: e6d079dd-1b1c-03c2-a3b7-f82cb4e64268
